[env/burn-staging]bug/fix visibilty (#2085)
* add button focus

* update location

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -76,6 +76,11 @@ h6 {
 }
 
 // Buttons
+
+button:focus {
+  outline: 1px auto $white !important;
+}
+
 button.btn,
 a.btn,
 input.btn {
